CLI v2.0: new commands, dot-notation, remove short flags
Major CLI overhaul with breaking changes:

Navigation: back, forward, tab.reload
Tab groups: tab.group, tab.ungroup, tab.groups
Cookies: cookie.list, cookie.get, cookie.set, cookie.clear
Search: search/find command with match refs
Batch: batch execution from JSON
Bookmarks: bookmark.add, bookmark.remove, bookmark.list
History: history.list, history.search
Screenshots: --annotate, --fullpage, auto-hide UI
Zoom: zoom get/set/reset

Removed all short flags (-o, -r, etc) for consistency.
Removed history.clear (too destructive).
Fixed --limit 0 returning default instead of empty.
Added CLI test suite (34 tests).

--- a/manifest.json
+++ b/manifest.json
@@ -52,7 +52,10 @@
     "system.display",
     "webNavigation",
     "nativeMessaging",
-    "downloads"
+    "downloads",
+    "cookies",
+    "bookmarks",
+    "history"
   ],
   "host_permissions": ["<all_urls>"],
   "content_security_policy": {
