--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "Surf",
   "version": "0.1.0",
-  "description": "AI-powered browser automation and chat",
+  "description": "Browser automation CLI for AI agents",
   "options_page": "options/options.html",
   "icons": {
     "16": "icons/icon-16.png",
@@ -10,15 +10,12 @@
     "128": "icons/icon-128.png"
   },
   "action": {
-    "default_title": "Open Surf",
+    "default_title": "Surf CLI",
     "default_icon": {
       "16": "icons/icon-16.png",
       "48": "icons/icon-48.png",
       "128": "icons/icon-128.png"
     }
-  },
-  "side_panel": {
-    "default_path": "sidepanel/index.html"
   },
   "background": {
     "service_worker": "service-worker-loader.js",
@@ -39,7 +36,6 @@
     }
   ],
   "permissions": [
-    "sidePanel",
     "storage",
     "unlimitedStorage",
     "activeTab",
@@ -70,14 +66,5 @@
       ],
       "use_dynamic_url": false
     }
-  ],
-  "commands": {
-    "toggle-side-panel": {
-      "suggested_key": {
-        "default": "Ctrl+Shift+P",
-        "mac": "Command+Shift+P"
-      },
-      "description": "Toggle Surf side panel"
-    }
-  }
+  ]
 }
