fix: install @vitest/ui to enable test:ui script
Addresses PR feedback - the test:ui script was broken because
@vitest/ui was not installed as a dev dependency.

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "devDependencies": {
     "@types/chrome": "^0.0.287",
     "@vitest/coverage-v8": "^4.0.16",
+    "@vitest/ui": "^4.0.16",
     "typescript": "^5.7.2",
     "vite": "^6.0.0",
     "vitest": "^4.0.16"
