feat: add Biome linter with strict rules for test code
- Add biome.json with 50+ strict rules for test files
- Enable nursery rules for promise handling (noFloatingPromises, noMisusedPromises)
- Enforce test best practices (noFocusedTests, noDoneCallback, etc.)
- Strict TypeScript rules (noExplicitAny, noNonNullAssertion, noImplicitAnyLet)
- Add lint scripts: npm run lint, lint:fix, lint:test, format
- Relaxed rules for test/mocks/ (mocks need flexibility for external APIs)
- Minor formatting fixes in existing test files

--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "dev": "vite build --watch --mode development",
     "build": "vite build",
     "check": "tsc --noEmit",
+    "lint": "biome check .",
+    "lint:fix": "biome check --write .",
+    "lint:test": "biome check test/",
+    "format": "biome format --write .",
     "test": "vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
@@ -28,6 +32,7 @@
     "zod": "^3.24.0"
   },
   "devDependencies": {
+    "@biomejs/biome": "^2.3.11",
     "@types/chrome": "^0.0.287",
     "@vitest/coverage-v8": "^4.0.16",
     "@vitest/ui": "^4.0.16",
